problem 4, write up, stuck at the last park

--- a/doc/midterm/5370_midterm.tex
+++ b/doc/midterm/5370_midterm.tex
@@ -1,1 +1,1 @@
-\documentclass{assignment}% \textwidth=6.5in% \hoffset-.75in% \textheight=9in% \voffset-.5in\begin{document}\title{5370 Midterm}\author{Ritchie Cai}\maketitleInstructions.\begin{itemize}        \item The exam is due before class on October 15, 2015.        \item Your solution is to be written in \LaTeX. The \LaTeX        file and the corresponding pdf file is to be emailed to \verb"Robert_Marks@Baylor.edu" by the deadline.        \item Show your work. Clarity of presentation counts.        \item No human resource will be consulted in the execution of the exam.        \item Problem~\ref{NewToyYoda} is really difficult. A successful solution might result in a publication. Be a Huffman!\end{itemize}\bigskip\input{problem1}\input{problem2}\input{problem3}\input{problem4}\input{problem5}\end{document}
+\documentclass{assignment}% \textwidth=6.5in% \hoffset-.75in% \textheight=9in% \voffset-.5in\begin{document}\title{5370 Midterm}\author{Ritchie Cai}\maketitleInstructions.\begin{itemize}        \item The exam is due before class on October 15, 2015.        \item Your solution is to be written in \LaTeX. The \LaTeX        file and the corresponding pdf file is to be emailed to \verb"Robert_Marks@Baylor.edu" by the deadline.        \item Show your work. Clarity of presentation counts.        \item No human resource will be consulted in the execution of the exam.        \item Problem~\ref{NewToyYoda} is really difficult. A successful solution might result in a publication. Be a Huffman!\end{itemize}\bigskip% \input{problem1}% \input{problem2}% \input{problem3}\input{problem4}% \input{problem5}\end{document}
