make each problem file able to compile standalone for now.

--- a/doc/midterm/problem2.tex
+++ b/doc/midterm/problem2.tex
@@ -1,3 +1,9 @@
+\documentclass{assignment}
+\begin{document}
+
+\title{5370 Midterm}
+
+
 \textbf{2.} Random variable are defined by the conditional probabilities
 \begin{itemize}
 \item  $\Pr[Y=1 | X=0] =q$
@@ -9,4 +15,6 @@ Assume $\Pr [X=0] =\pi $ where $\pi$ is some probability.
 \item Calculate the mutual information between $X$ and $Y$.
 \item What value of $\pi$ maximizes the mutual information?
 \end{enumerate}
+
+\end{document}
 
