--- a/doc/midterm/problem1.tex
+++ b/doc/midterm/problem1.tex
@@ -1,3 +1,8 @@
+\documentclass{assignment}
+\begin{document}
+
+\title{5370 Midterm}
+
 \textbf{1.} A random variable $X$ has the same probability of one third at the points $x=-1,0,1.$  Its entropy is thus $H_X = \log_2 3.$ Let $g(\cdot) $ denote a continuous function and define the random variable $Y=g(X)$.
 \begin{enumerate} \item  Find a continuous function, $g(\cdot )$, that reduces the entropy of $Y$ to zero.
 \item  Find another continuous function, $g(\cdot )$, that reduces the entropy of $Y$ below the entropy of $X$, but not to zero.
@@ -5,3 +10,5 @@
 \end{enumerate}
 For all three answers, please sketch the nonlinearity and label your axes.
 
+
+\end{document}
