--- a/doc/midterm/problem5.tex
+++ b/doc/midterm/problem5.tex
@@ -1,3 +1,9 @@
+\documentclass{assignment}
+\begin{document}
+
+\title{5370 Midterm}
+
+
 \textbf{5.} \label{NewToyYoda}
 Continuation from Problem~\ref{SquishyBear}.
 The distribution of English word length, $k$, is a shifted Poisson random variable. At the end of each word, we will add a space to separate words. There are no spaces allowed in the middle of a word. Under this assumption word length follows the distribution
@@ -15,3 +21,6 @@ Assuming there are about a million words in the English language.
 \item How many times must we randomly sample before getting $W$ words in a row under each distribution?
 \item If a word is $w_k$ characters long (including a space at the end), assume it requires $k \log_2 N$ bits to form. How many bits do we use, on average, to query to the point we have $W$ words in a row?
 \end{enumerate}
+
+\end{document}
+
