--- a/doc/midterm/problem2.tex
+++ b/doc/midterm/problem2.tex
@@ -14,71 +14,50 @@ Assume $\Pr [X=0] =\pi $ where $\pi$ is some probability.
 \begin{enumerate}
 \item Calculate the mutual information between $X$ and $Y$.\\
   \textbf{Solutions:}\\
-  Let
-  \begin{align*}
-    X_0 & = \{X=0\} \\
-    X_1 & = \{X=1\} \\
-    Y_0 & = \{Y=0\} \\
-    Y_1 & = \{Y=1\}
-  \end{align*}
-  \begin{align*}
-    \Pr[Y_1 | X_0] & = \df{\Pr[Y_1, X_0]}{\Pr[X_0]} = q \\
-    \Pr[Y_1, X_0] & = \Pr[X_0]\; q = \pi q \\
-    \Pr[X_0 | Y_1] & = \df{\Pr[Y_1, X_0]}{\Pr[Y_1]} = \df{\pi q}{\Pr[Y_1]}\\
-    \Pr[Y_1] & = \Pr[Y_1 | X_0] + \Pr[Y_1 | X_1] = q + \Pr[Y_1 | X_1]\\
-    \Pr[X_0 | Y_1] & = \df{\pi q}{q + \Pr[Y_1|X_1]} \\
-    \\
-    \Pr[Y_0 | X_1] & = \df{\Pr[Y_0, X_1]}{\Pr[X_1]} = p \\
-    \Pr[Y_0, X_1] & = (1-\pi) p \\
-    \Pr[X_1 | Y_0] & = \df{\Pr[X_1, Y_0]}{\Pr[Y_0]} = \df{(1-\pi)p}{\Pr[Y_0]} \\
-    \Pr[Y = 0] & = \Pr[Y_0 | X_0] + \Pr[Y_0 | X_1] = \Pr[Y_0 | X_0] + p\\
-    \Pr[X_1|Y_0] & = \df{(1-\pi) p }{\Pr[Y_0 | X_0] + p}
-  \end{align*}
-  \begin{align*}
-    I(X;Y) & = \sum_{x,y}p(x, y) \log \df{p(x, y)}{p(x)p(y)} \\
-           & = \Pr[X_0, Y_0] \log \df{\Pr[X_0, Y_0]}{\Pr[X_0]\Pr[Y_0]}
-             + \Pr[X_0, Y_1] \log \df{\Pr[X_0, Y_1]}{\Pr[X_0]\Pr[Y_1]} +\\
-           & \quad \Pr[X_1, Y_0] \log \df{\Pr[X_1, Y_0]}{\Pr[X_1]\Pr[Y_0]}
-             + \Pr[X_1, Y_1] \log \df{\Pr[X_1, Y_1]}{\Pr[X_1]\Pr[Y_1]} \\
-           % & = \Pr[X_0, Y_0] \log \df{\Pr[X_0, Y_0]}{\Pr[X_0]\Pr[Y_0]}
-           %   + \pi q \log \df{q}{\Pr[Y_1]} + \\
-           % & \quad (1-\pi)p \log \df{ p }{\Pr[Y_0]}
-           %   + \Pr[X_1, Y_1] \log \df{\Pr[X_1, Y_1]}{\Pr[X_1]\Pr[Y_1]} \\
-           % & = \Pr[X_0, Y_0] \log \df{\Pr[Y_0 | X_0]}{\Pr[Y_0]}
-           %   + \pi q \log \df{q}{\Pr[Y_1]} + \\
-           % & \quad (1-\pi)p \log \df{ p }{\Pr[Y_0]}
-           %   + \Pr[X_1, Y_1] \log \df{\Pr[Y_1 | X_1]}{\Pr[Y_1]} \\
-           & = \Pr[X_0, Y_0] \log \df{\Pr[Y_0 | X_0]}{\Pr[Y_0]}
-             + \Pr[X_0, Y_1] \log \df{\Pr[Y_1 | X_0]}{\Pr[Y_1]} +\\
-           & \quad \Pr[X_1, Y_0] \log \df{\Pr[Y_0 | X_1]}{\Pr[Y_0]}
-             + \Pr[X_1, Y_1] \log \df{\Pr[Y_1 | X_1]}{\Pr[Y_1]} \\
-           & = \Pr[Y_0, X_0]\log \Pr[Y_0 | X_0] - \Pr[Y_0, X_0] \log \Pr[Y_0] + \\
-           & \quad \Pr[Y_1, X_0] \log \Pr[Y_1 | X_0] - \Pr[Y_1, X_0] \log \Pr[Y_1] + \\
-           & \quad \Pr[Y_0, X_1] \log \Pr[Y_0 | X_1] - \Pr[Y_0, X_1] \log \Pr[Y_0] + \\
-           & \quad \Pr[Y_1, X_1] \log \Pr[Y_1 | X_1] - \Pr[Y_1, X_1] \log \Pr[Y_1] \\
-    % mod
-           & = \Pr[Y_0, X_0]\log \Pr[Y_0 | X_0] - \Pr[Y_0, X_0] \log \Pr[Y_0] + \\
-           & \quad \pi q \log q - \Pr[Y_1, X_0] \log \Pr[Y_1] + \\
-           & \quad (1-\pi) p \log p - \Pr[Y_0, X_1] \log \Pr[Y_0] + \\
-           & \quad \Pr[Y_1, X_1] \log \Pr[Y_1 | X_1] - \Pr[Y_1, X_1] \log \Pr[Y_1]
-    \shortintertext{Still need:}
-    \Pr[X_0, Y_0]           & \qquad \Pr[X_1, Y_1]\\
-    \Pr[Y_0|X_0], \Pr[Y_0]  & \qquad \Pr[Y_1 | X_1], \Pr[Y_1]\\
-    \Pr[X_0|Y_0]            & \qquad \Pr[X_1 | Y_1]
-  \end{align*}
 
+  Assuming both $Y$ and $X$ are binary
   \begin{align*}
-    I(X ; Y) & = H(X) - H(X | Y) \\
-           & = - \pi \log \pi - (1 - \pi) \log (1 - \pi)  - H(X | Y) \\
-    H(X | Y) & = - \sum_{x, y} p(x, y) \log p(x | y) \\
-             & = - \Pr[X_0, Y_0]\log \Pr[X_0 | Y_0] - \Pr[X_0, Y_1]\log \Pr[X_0 | Y_1] \\
-             & \quad - \Pr[X_1, Y_0]\log \Pr[X_1 | Y_0] - \Pr[X_1, Y_1]\log \Pr[X_1 | Y_1] \\
-             & = - \Pr[X_0, Y_0]\log \Pr[X_0 | Y_0] -  \pi q \log \df{\pi q}{\Pr[Y_1]} \\
-             & \quad  - (1 - \pi) p \log \df{(1-\pi) p}{\Pr[Y_0]} - \Pr[X_1, Y_1]\log \Pr[X_1 | Y_1] \\
-             & = - \Pr[X_0, Y_0]\log (\Pr[Y_0] - p) -  \pi q \log \df{\pi q}{\Pr[Y_1]} \\
-             & \quad  - (1 - \pi) p \log \df{(1-\pi) p}{\Pr[Y_0]} - \Pr[X_1, Y_1]\log (\Pr[Y_1] - q)
+    \Pr[Y=0 | X=0] & = 1 - q \\
+    \Pr[Y=1 | X=1] & = 1 - p \\
+    \Pr[Y=0] & = \Pr[Y=0, X=0] + \Pr[Y=0, X=1] \\
+                   & = \Pr[Y=0 | X=0]\Pr[X=0] + \Pr[Y=0 | X=1]\Pr[X=1] \\
+                   & = (1- q) \pi + p(1 - \pi) \\
+                   & = p + \pi (1 - q - p) \\
+    \Pr[Y=1] & = \Pr[Y=1, X=0] + \Pr[Y=1, X=1] \\
+                   & = \Pr[Y=1 | X=0]\Pr[X=0] + \Pr[Y=1 | X=1]\Pr[X=1] \\
+                   & = q \pi + (1- p) (1 - \pi) \\
+                   & = q \pi + 1 - \pi - p + p \pi \\
+                   & = 1 - p + \pi (q + p - 1)
   \end{align*}
-\item What value of $\pi$ maximizes the mutual information?
+  \begin{align*}
+    I(X;Y) & = H(Y) - H(Y|X) \\
+    H(Y) & = -\Pr[Y=0] \log \Pr[Y=0] - \Pr[Y=1] \log \Pr[Y=1] \\
+         & = - (p + \pi (1 - q - p)) \log (p + \pi (1 - q - p)) \\
+         & \quad - (1 - p + \pi (q + p - 1)) \log (1 - p + \pi (q + p - 1)) \\
+    H(Y|X) & = \sum_{x,y}\Pr[X=x, Y=y]\log \Pr[Y=y|X=x] \\
+           & = \sum_{x, y} \Pr[X=x] \Pr[Y=y|X=x] \log \Pr[Y=y|X=x] \\
+           & = \Pr[X=0]\Pr[Y=0|X=0] \log \Pr[Y=0|X=0] \\
+           & \quad + \Pr[X=0]\Pr[Y=1|X=0] \log \Pr[Y=1|X=0] \\
+           & \quad + \Pr[X=1]\Pr[Y=0|X=1] \log \Pr[Y=0|X=1] \\
+           & \quad + \Pr[X=1]\Pr[Y=1|X=1] \log \Pr[Y=1|X=1] \\
+           & = \pi (1 - q) \log (1 - q)  + \pi q \log q \\
+           & \quad + (1 - \pi) p \log p + (1 - \pi) (1 - p) \log (1 - p) \\
+    I(X;Y) & = - (p + \pi (1 - q - p)) \log (p + \pi (1 - q - p)) \\
+           & \quad - (1 - p + \pi (q + p - 1)) \log (1 - p + \pi (q + p - 1)) \\
+           & \quad - \pi (1 - q) \log (1 - q)  - \pi q \log q \\
+           & \quad - (1 - \pi) p \log p - (1 - \pi) (1 - p) \log (1 - p)
+  \end{align*}
+\item What value of $\pi$ maximizes the mutual information? \\
+  \textbf{Solution:} \\
+  \begin{align*}
+    \df{d}{d\pi} I(X;Y)
+    & = -(1-q-p)\log (p + \pi (1 - q - p)) - 1 + q + p \\
+    & \quad - (q + p - 1)\log (1 - p + \pi (q + p - 1)) - q - p + 1 \\
+    & \quad - (1 - q) \log (1- q) - q \log q+ p \log p + (1 - p) \log (1 - p) \\
+    & = -(1-q-p)\log (p + \pi (1 - q - p)) \\
+    & \quad - (q + p - 1)\log (1 - p + \pi (q + p - 1)) \\
+    & \quad - (1 - q) \log (1- q) - q \log q+ p \log p + (1 - p) \log (1 - p)
+  \end{align*}
 \end{enumerate}
 
 \end{document}
