--- a/doc/midterm/problem3.tex
+++ b/doc/midterm/problem3.tex
@@ -11,7 +11,13 @@ The average word in English is $\lambda =5.1$ letters.
 \item  If letters are drawn randomly from an $N=27$ character alphabet (A through Z and a space),\footnote{
     We are not considering punctuation, capitalization or numbers.
   }
-  then when is a thick novel with $W$ words typical? Explain your reasoning.
+  then when is a thick novel with $W$ words typical? Explain your reasoning. \\
+
+  \textbf{Solution:} \\
+  When
+  \begin{align*}
+    p\left(X^{\ceil{W*(5.1 + 1)}}\right) & \approx 2^{-W*(5.1 + 1)*(5.1 + 1)}
+  \end{align*}
 \item Here is a web page of 40,000 sampled words
   \begin{center}
     \verb"http://www.math.cornell.edu/~mec/2003-2004/cryptography/subs/frequencies.html"
